--- a/app/views/availabilities/index.html.haml
+++ b/app/views/availabilities/index.html.haml
@@ -77,6 +77,7 @@
 													%div#yellow= radio_button_tag "#{shift.id}", 'maybe', false
 												%td
 													%div#red= radio_button_tag "#{shift.id}", 'no', false
+												%td.details= link_to 'details', shift
 											- elsif availability.availability == 1
 												%td
 													%div#green= radio_button_tag "#{shift.id}", 'yes', false
@@ -84,6 +85,7 @@
 													%div#yellow= radio_button_tag "#{shift.id}", 'maybe', true
 												%td
 													%div#red= radio_button_tag "#{shift.id}", 'no', false
+												%td.details= link_to 'details', shift
 											- elsif availability.availability == 0
 												%td
 													%div#green= radio_button_tag "#{shift.id}", 'yes', false
@@ -91,6 +93,7 @@
 													%div#yellow= radio_button_tag "#{shift.id}", 'maybe', false
 												%td
 													%div#red= radio_button_tag "#{shift.id}", 'no', true
+												%td.details= link_to 'details', shift
 
 
 					%br
