--- a/app/views/shifts/index.html.haml
+++ b/app/views/shifts/index.html.haml
@@ -24,7 +24,7 @@
 				%a= link_to 'Set Availability', availabilities_path
 			- if @user.usertype == 'Administrator'
 				%li 
-					%a= link_to 'VA ER Scheduler', shifts_path
+					%a= link_to 'Shift Scheduler', shifts_path
 				%li
 					%a= link_to 'Set FTE Multiplier', multiply_path
 
@@ -96,7 +96,7 @@
 										%tr
 											%td= "#{shift.shiftstart.to_s[11..15]} to #{shift.shiftend.to_s[11..15]}"
 											%td Assigned doctor: "#{shift.owner}"
-											%td= link_to 'edit', shift_path(shift)
+											%td= link_to 'edit', edit_shift_path(shift)
 					%br
 
 
