--- a/app/views/verification/not.html.haml
+++ b/app/views/verification/not.html.haml
@@ -24,7 +24,7 @@
 				%a= link_to 'Set Availability', availabilities_path
 			- if @user.usertype == 'Administrator'
 				%li 
-					%a= link_to 'VA ER Scheduler', shifts_path
+					%a= link_to 'Shift Scheduler', shifts_path
 				%li
 					%a= link_to 'Set FTE Multiplier', multiply_path
 
