--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -27,7 +27,7 @@
   %p
     = f.label :fte
     %br
-    = f.select :fte, ['0.1', '0.2', '0.25', '0.4', '0.5', '0.6', '0.75', '0.8', '1.0']
+    = f.number_field :fte, step: 0.1, :"value" => 1.0, :"max" => 1.0, :"min" => 0.1
   %p
     = f.label :username, :id => "sign_up_username"
     %br
