--- a/app/views/shifts/edit.html.haml
+++ b/app/views/shifts/edit.html.haml
@@ -9,7 +9,7 @@
     %div.collapse.navbar-collapse
       %ul.nav.navbar-nav.navbar-right
         %li
-          %a.button.btn.btn-default.btn-lg.btn-link{title: "Account Settings", type: "button"}
+          %a.button.btn.btn-default.btn-lg.btn-link{title: "Account Settings", type: "button", href: "/settings"}
             %span.glyphicon.glyphicon-cog
         %li
           %a.button.btn.btn-default.btn-lg.btn-link{title: "Log Out", type: "button", href: "/logout"}
