--- a/app/views/settings/index.html.haml
+++ b/app/views/settings/index.html.haml
@@ -29,7 +29,8 @@
 					%a= link_to 'Set FTE Multiplier', multiply_path
 
 	%div#page-content-wrapper
-		%div.container-fluid 
+		%div.container-fluid
+			%p#notice= notice
 			%h1 User Details
 
 			%ul#details
