--- a/app/assets/stylesheets/startbootstrap.css
+++ b/app/assets/stylesheets/startbootstrap.css
@@ -46,7 +46,8 @@
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
-    background: #0099CC;
+    background: #CCCCCC;
+    border-right: 1px solid;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -82,6 +83,8 @@
 .sidebar-nav li {
     text-indent: 20px;
     line-height: 40px;
+    border-bottom: 1px solid;
+    border-color: gray;
 }
 
 .sidebar-nav li a {
@@ -92,7 +95,7 @@
 
 .sidebar-nav li a:hover {
     text-decoration: none;
-    color: #fff;
+    color: rgb(187, 121, 0);;
     background: rgba(255,255,255,0.2);
 }
 
