--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,11 +1,11 @@
 %nav.navbar.navbar-default
 	%div.container-fluid
 		%div.navbar-brand
-			%h1 VA hospital logo
+			%a.title{:href => home_path} VA ER Core Staff Scheduler
 		%div.navbar-center
 			= hidden_field_tag @user = User.find_by_id(session[:user_id])
 			%h2.title= "Hello, #{@user.first_name} #{@user.last_name}"
-			%p= "You are logged in as #{@user.usertype} with FTE of #{@user.fte}"
+			%p.header-info= "You are logged in as #{@user.usertype} with FTE of #{@user.fte}"
 		%div.collapse.navbar-collapse
 			%ul.nav.navbar-nav.navbar-right
 				%li
@@ -14,7 +14,7 @@
 				%li
 					%a.button.btn.btn-default.btn-lg.btn-link{title: "Log Out", type: "button", href: "/logout"}
 						%span.glyphicon.glyphicon-off
-			
+						
 %div#wrapper
 	%div#sidebar-wrapper
 		%ul.sidebar-nav
