before home stuff almost done, need to fix forms

--- a/app/views/password_resets/edit.html.haml
+++ b/app/views/password_resets/edit.html.haml
@@ -1,15 +1,18 @@
-%body#center
-  = form_for @user, :url => password_reset_path(params[:id]) do |f|
-    - if @user.errors.any?
-      .error_messages
-        %h2 Form is invalid
-        %ul
-          - for message in @user.errors.full_messages
-            %li= message
-    .field
-      = f.label :password
-      = f.password_field :password
-    .field
-      = f.label :password_confirmation
-      = f.password_field :password_confirmation
-    .actions= f.submit "Update Password"
+%html.beforehome
+  %body.beforehome
+    %div.container
+      %div.card.card-container
+        = form_for @user, :url => password_reset_path(params[:id]) do |f|
+          - if @user.errors.any?
+            .error_messages
+              %h2.beforehome-title Form is invalid
+              %ul
+                - for message in @user.errors.full_messages
+                  %li= message
+          .field
+            = f.label :password
+            = f.password_field :password
+          .field
+            = f.label :password_confirmation
+            = f.password_field :password_confirmation
+          .actions= f.submit "Update Password"
