--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -4,44 +4,23 @@
       %div.card.card-container
         %h2.beforehome-title Create New Login
 
-        = form_for @user do |f|
+        = form_for(@user, :html => {:class => 'signin'}) do |f|
           - if @user.errors.any?
             .error_messages
               %h2 Form is invalid
               %ul
                 - for message in @user.errors.full_messages
                   %li= message
-
-          %p
-            = f.label :first_name
-            %br
-            = f.text_field :first_name
-          %p
-            = f.label :last_name
-            %br
-            = f.text_field :last_name
-          %p
-            = f.label :email
-            %br
-            = f.text_field :email
-          %p
-            = f.label :usertype
-            %br
-            = f.select :usertype, ['Administrator', 'Core Doctor', 'Night Doctor']
-          %p
-            = f.label :fte
-            %br
-            = f.number_field :fte, step: 0.1, :"value" => 1.0, :"max" => 1.0, :"min" => 0.1
-          %p
-            = f.label :username, :id => "sign_up_username"
-            %br
-            = f.text_field :username
-          %p
-            = f.label :password
-            %br
-            = f.password_field :password
-          %p
-            = f.label :password_confirmation
-            %br
-            = f.password_field :password_confirmation
-          %p.button= f.submit "Sign Up", :id => "signup_submit"
+          = f.label :personal_info, "Personal Information"
+          = f.text_field :first_name, class: 'form-control', placeholder: 'First Name'
+          = f.text_field :last_name, class: 'form-control', placeholder: "Last Name"
+          = f.text_field :email, class: 'form-control', placeholder: "Email"
+          = f.label :usertype, "Select User Type"
+          = f.select(:usertype, ['Administrator', 'Core Doctor', 'Night Doctor'], {}, {:class=> 'form-control'})
+          = f.label :fte, "FTE Multiplier"
+          = f.number_field :fte, step: 0.1, :"value" => 1.0, :"max" => 1.0, :"min" => 0.1, class: 'form-control'
+          = f.label :account_info, "Account Information"
+          = f.text_field :username, class: 'form-control', placeholder: "Username"
+          = f.password_field :password, class: 'form-control', placeholder: "Password"
+          = f.password_field :password_confirmation, class: 'form-control', placeholder: "Password Confirmation"
+          %button.btn-login.btn-lg.btn-pprimary.btn-block.btn-signin{:type=>"submit"} Sign Up
