--- a/app/views/shifts/new.html.haml
+++ b/app/views/shifts/new.html.haml
@@ -14,6 +14,11 @@
 				%li
 					%a.button.btn.btn-default.btn-lg.btn-link{title: "Log Out", type: "button", href: "/logout"}
 						%span.glyphicon.glyphicon-off
+
+:css
+	label {
+		width: 110px;
+	}
 			
 %div#wrapper
 	%div#sidebar-wrapper
@@ -33,15 +38,19 @@
 			%h1 Add a shift
 
 			= form_tag shifts_path do
-				- if Time.now.dst?
-					= label :shift, :shiftstart, 'Start'
-					= datetime_select :shift, :shiftstart, default: -6.hours.from_now
-				- else
-					= label :shift, :shiftstart, 'Start'
-					= datetime_select :shift, :shiftstart, default: -7.hours.from_now
+				= label :shift, :date, 'Shift Start Date:'
+				= date_select :shift, :date, :start_year => Date.today.year
 				%br
-				= label :shift, :shiftend, 'Length'
+				=label :shift, :time, 'Shift Start Time:'
+				= select :shift, :hour, ['00', '01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23'], selected: Time.now.hour.to_s
+				:plain
+					:
+				= select :shift, :min, ['00', '15', '30', '45']
+				%br
+				= label :shift, :shiftend, 'Duration of Shift:'
 				= select :length, :length, [1, 2, 4, 6, 8, 12]
+				:plain
+					hour(s)
 				%br
 				= submit_tag 'Save', :id => "save_submit"
 
