--- a/app/views/shifts/new.html.haml
+++ b/app/views/shifts/new.html.haml
@@ -17,7 +17,7 @@
 
 :css
 	label {
-		width: 110px;
+		width: 120px;
 	}
 			
 %div#wrapper
@@ -42,6 +42,9 @@
 				= date_select :shift, :date, :start_year => Date.today.year
 				%br
 				=label :shift, :time, 'Shift Start Time:'
+				- hour = Time.now.hour.to_i
+				- if hour < 10
+					- hour = "0#{hour}"
 				= select :shift, :hour, ['00', '01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23'], selected: Time.now.hour.to_s
 				:plain
 					:
