--- a/app/views/shifts/new.html.haml
+++ b/app/views/shifts/new.html.haml
@@ -15,11 +15,7 @@
 					%a.button.btn.btn-default.btn-lg.btn-link{title: "Log Out", type: "button", href: "/logout"}
 						%span.glyphicon.glyphicon-off
 
-:css
-	label {
-		width: 120px;
-	}
-			
+
 %div#wrapper
 	%div#sidebar-wrapper
 		%ul.sidebar-nav
@@ -39,13 +35,13 @@
 
 			= form_tag shifts_path do
 				= label :shift, :date, 'Shift Start Date:'
-				= date_select :shift, :date, :start_year => Date.today.year
+				= date_select :shift, :date, :start_year => Time.now.year
 				%br
 				=label :shift, :time, 'Shift Start Time:'
 				- hour = Time.now.hour.to_i
 				- if hour < 10
 					- hour = "0#{hour}"
-				= select :shift, :hour, ['00', '01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23'], selected: Time.now.hour.to_s
+				= select :shift, :hour, ['00', '01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23'], selected: hour
 				:plain
 					:
 				= select :shift, :min, ['00', '15', '30', '45']
